main.css
/* ... */
@media screen and (min-width: 2000px) {
    h1{
        font-size: 60px;
    }
    #headerText{
        min-width: 56vw;
    }
    #headerSubText{
        font-size: 32px;
    }
    .projectArchive, .projectSelect{
        width: 28vw;
    }
    .profileContainer{
        max-width:57vw;
    }
    .projectSectionTitle{
        max-width: 57vw;
    }
}

/* ANIMATIONS */
.fadein {
    animation: fadein 1s ease-in-out;
}
@keyframes fadein {
    0% {
      transform: translateX(-5vh);
      opacity: 0;
    }
    100% {
      transform: translateX(0vh);
      opacity: 1;
    }
}
.bounce {
    -moz-animation: bounce 3s infinite;
    -webkit-animation: bounce 3s infinite;
    animation: bounce 3s infinite;
} 
@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
      transform: translateY(0);
    }
    40% {
      transform: translateY(-10px);
    }
    60% {
      transform: translateY(-5px);
    }
}

 /* DARK MODE TOGGLE */
.theme-switch-wrapper {
    display: flex;
    align-items: center;
    padding-left: 15px;
    padding-right: 10px;
}
.theme-switch, .theme-switch-wrapper-mobile{
    display: inline-block;
    height: 30px;
    position: relative;
    width: 56px;
    margin: auto;
}
.theme-switch-wrapper-mobile{
    position:absolute;
    right: 85px;
    top: 14px;
}
.theme-switch input {
    display:none;
}
.slider {
    background-color: var(--lighter);
    bottom: 0;
    cursor: pointer;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    transition: .4s;
}
.slider:hover {
    background-color: var(--light);
}
.slider:before {
    background-color: var(--background);
    bottom: 4px;
    content: "";
    height: 22px;
    left: 4px;
    position: absolute;
    transition: .4s;
    width: 22px;
}
input:checked + .slider {
    background-color: var(--light);
}
input:checked + .slider:hover{
    background-color: var(--main);
}
input:checked + .slider:before {
    transform: translateX(26px);
}
.slider.round {
    border-radius: 34px;
}
.slider.round:before {
    border-radius: 50%;
}

